--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,400&display=swap');
 $dark: #22222b;
 $light: #faf9fe;
+$text: #7f7f82;
 
 body, html{
   height: 100vh;
@@ -71,9 +72,121 @@ body{
   }
 }
 
+.title-h2{
+  font-size: 48px;
+  font-weight: 500;
+  margin-top: 0;
+}
+
 .btn-scroll{
   background-color: transparent;
   border: none;
   display: block;
   margin: 0 auto;
+}
+
+.section-about-me{
+  padding-top: 240px;
+  padding-bottom: 200px;
+  .title-h2{
+    margin-bottom: 20px;
+    margin-top: 12px;
+  }
+}
+
+.box-about{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 500;
+  &-item{
+    flex: 0 0 46%;
+    max-width: 46%;
+    position: relative;
+    &:first-child{
+      display: flex;
+      justify-content: flex-end;
+      flex: 0 0 50%;
+      max-width: 50%;
+    }
+  }
+  &__back{
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    top: -108px;
+  }
+  &__vertical{
+    position: absolute;
+    left: 0;
+    writing-mode: vertical-lr;
+    transform: rotate(180deg);
+    bottom: 58px;
+    font-size: 16px;
+    &::after{
+      content: '';
+      display: block;
+      width: 1px;
+      height: 45px;
+      background-color: $dark;
+      position: absolute;
+      right: 10px;
+      top: 90px;
+    }
+  }
+  &__text{
+    color: $text;
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 48px;
+  }
+}
+
+.progress-bar{
+  &-text{
+    font-size: 16px;
+    font-weight: 500;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 21px;
+    &:last-child{
+      margin-bottom: 0;
+    }
+  }
+  &-line{
+    height: 2px;
+    width: 100%;
+    background-color: $dark;
+    position: relative;
+    &::before{
+      content: '';
+      background-image: url("../images/point.png");
+      display: block;
+      background-repeat: no-repeat;
+      width: 6px;
+      height: 11px;
+      position: absolute;
+      left: -1px;
+      top: calc(50% - 5.5px)
+    }
+    &::after{
+      content: '';
+      right: 0;
+      background-color: #f2f2f2;
+      height: 2px;
+      display: block;
+      position: absolute;
+    }
+  }
+  &__indesign{
+    &::after{
+      width: 35%;
+    }
+  }
+  &__xd{
+    &::after{
+      width: 20%;
+    }
+  }
 }
