--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,11 @@ body {
   color: #22222b;
 }
 
+.text-center {
+  text-align: center;
+  color: #7f7f82;
+}
+
 .wrapper {
   max-width: 1170px;
   padding-right: 15px;
@@ -50,11 +55,11 @@ body {
 .nav-link {
   color: #22222b;
   text-decoration: none;
-  border-bottom: 1px solid transparent;
+  border-bottom: 2px solid transparent;
   transition: 0.3s;
 }
 .nav-link:hover {
-  border-bottom: 1px solid #22222b;
+  border-bottom: 2px solid #22222b;
 }
 
 .title-h1 {
@@ -67,9 +72,20 @@ body {
 }
 
 .title-h2 {
-  font-size: 48px;
-  font-weight: 500;
+  font-size: 36px;
+  font-weight: 400;
+  color: #22222b;
   margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.title-h3 {
+  font-size: 22px;
+  font-weight: 400;
+}
+
+.after-title {
+  font-size: 16px;
 }
 
 .btn-scroll {
@@ -77,15 +93,25 @@ body {
   border: none;
   display: block;
   margin: 0 auto;
+  position: relative;
+}
+.btn-scroll::before {
+  content: "(Not active)";
+  display: block;
+  font-weight: 500;
+  right: -85px;
+  top: 13px;
+  position: absolute;
 }
 
 .section-about-me {
   padding-top: 240px;
-  padding-bottom: 200px;
+  padding-bottom: 132px;
 }
 .section-about-me .title-h2 {
-  margin-bottom: 20px;
   margin-top: 12px;
+  font-size: 48px;
+  font-weight: 500;
 }
 
 .box-about {
@@ -177,6 +203,88 @@ body {
 }
 .progress-bar__xd::after {
   width: 20%;
+}
+
+.section-services {
+  background-color: #faf9fe;
+  padding-top: 120px;
+}
+
+.service {
+  display: grid;
+  grid-template: 1fr 1fr/1fr 1fr 1fr;
+  gap: 48px;
+  margin-top: 65px;
+  margin-bottom: 30px;
+}
+.service-item:hover .service__link-text {
+  width: inherit;
+  color: #22222b;
+  opacity: 1;
+  padding-right: 9px;
+}
+.service .title-h3 {
+  margin-bottom: 18px;
+}
+.service__icon {
+  display: block;
+  background-repeat: no-repeat;
+  width: 44px;
+  height: 37px;
+  margin-bottom: 30px;
+}
+.service__design {
+  background-image: url("../images/icon1.png");
+  background-size: 41px 35px;
+}
+.service__photo {
+  background-image: url("../images/icon2.png");
+  background-size: 43px 35px;
+}
+.service__web {
+  background-image: url("../images/icon3.png");
+  background-size: 41px 35px;
+}
+.service__media {
+  background-image: url("../images/icon4.png");
+  background-size: 37px 37px;
+}
+.service__marketing {
+  background-image: url("../images/icon5.png");
+  background-size: 44px 37px;
+}
+.service__app {
+  background-image: url("../images/icon6.png");
+  background-size: 37px 37px;
+}
+.service__text {
+  color: #7f7f82;
+  font-size: 14px;
+  line-height: 1.8;
+}
+.service__link {
+  color: #22222b;
+  font-size: 14px;
+  text-decoration: none;
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 20px 0;
+  height: 50px;
+}
+.service__link-text {
+  opacity: 0;
+  width: 0;
+  padding-right: 0;
+  color: transparent;
+  transition: 0.4s ease-in-out;
+}
+.service__link-line {
+  display: block;
+  width: 25px;
+  height: 1px;
+  background-color: #22222b;
 }
 
 /*# sourceMappingURL=style.css.map */
