--- a/styles/style.scss
+++ b/styles/style.scss
@@ -12,6 +12,11 @@ body{
   color: $dark;
 }
 
+.text-center{
+  text-align: center;
+  color: $text;
+}
+
 .wrapper{
   max-width: 1170px;
   padding-right: 15px;
@@ -55,10 +60,10 @@ body{
   &-link{
     color: $dark;
     text-decoration: none;
-    border-bottom: 1px solid transparent;
+    border-bottom: 2px solid transparent;
     transition: .3s;
     &:hover{
-      border-bottom: 1px solid $dark;
+      border-bottom: 2px solid $dark;
     }
   }
 }
@@ -73,9 +78,20 @@ body{
 }
 
 .title-h2{
-  font-size: 48px;
-  font-weight: 500;
+  font-size: 36px;
+  font-weight: 400;
+  color: $dark;
   margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.title-h3{
+  font-size: 22px;
+  font-weight: 400;
+}
+
+.after-title{
+  font-size: 16px;
 }
 
 .btn-scroll{
@@ -83,14 +99,24 @@ body{
   border: none;
   display: block;
   margin: 0 auto;
+  position: relative;
+  &::before{
+    content: '(Not active)';
+    display: block;
+    font-weight: 500;
+    right: -85px;
+    top: 13px;
+    position: absolute;
+  }
 }
 
 .section-about-me{
   padding-top: 240px;
-  padding-bottom: 200px;
+  padding-bottom: 132px;
   .title-h2{
-    margin-bottom: 20px;
     margin-top: 12px;
+    font-size: 48px;
+    font-weight: 500;
   }
 }
 
@@ -187,6 +213,92 @@ body{
   &__xd{
     &::after{
       width: 20%;
+    }
+  }
+}
+
+.section-services{
+  background-color: $light;
+  padding-top: 120px;
+}
+
+.service{
+  display: grid;
+  grid-template: 1fr 1fr / 1fr 1fr 1fr;
+  gap: 48px;
+  margin-top: 65px;
+  margin-bottom: 30px;
+  &-item{
+    &:hover{
+      .service__link-text{
+        width: inherit;
+        color: $dark;
+        opacity: 1;
+        padding-right: 9px;
+      }
+    }
+  }
+  .title-h3{
+    margin-bottom: 18px;
+  }
+  &__icon{
+    display: block;
+    background-repeat: no-repeat;
+    width: 44px;
+    height: 37px;
+    margin-bottom: 30px;
+  }
+  &__design{
+    background-image: url("../images/icon1.png");
+    background-size: 41px 35px;
+  }
+  &__photo{
+    background-image: url("../images/icon2.png");
+    background-size: 43px 35px;
+  }
+  &__web{
+    background-image: url("../images/icon3.png");
+    background-size: 41px 35px;
+  }
+  &__media{
+    background-image: url("../images/icon4.png");
+    background-size: 37px 37px;
+  }
+  &__marketing{
+    background-image: url("../images/icon5.png");
+    background-size: 44px 37px;
+  }
+  &__app{
+    background-image: url("../images/icon6.png");
+    background-size: 37px 37px;
+  }
+  &__text{
+    color: $text;
+    font-size: 14px;
+    line-height: 1.8;
+  }
+  &__link{
+    color: $dark;
+    font-size: 14px;
+    text-decoration: none;
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 20px 0;
+    height: 50px;
+    &-text{
+      opacity: 0;
+      width: 0;
+      padding-right: 0;
+      color: transparent;
+      transition: .4s ease-in-out;
+    }
+    &-line{
+      display: block;
+      width: 25px;
+      height: 1px;
+      background-color: $dark;
     }
   }
 }
