--- a/styles/style.css
+++ b/styles/style.css
@@ -208,14 +208,14 @@ body {
 .section-services {
   background-color: #faf9fe;
   padding-top: 120px;
+  padding-bottom: 100px;
 }
 
 .service {
   display: grid;
   grid-template: 1fr 1fr/1fr 1fr 1fr;
-  gap: 48px;
+  gap: 31px 48px;
   margin-top: 65px;
-  margin-bottom: 30px;
 }
 .service-item:hover .service__link-text {
   width: inherit;
@@ -270,8 +270,7 @@ body {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding: 20px 0;
-  height: 50px;
+  height: 60px;
 }
 .service__link-text {
   opacity: 0;
@@ -285,6 +284,51 @@ body {
   width: 25px;
   height: 1px;
   background-color: #22222b;
+}
+
+.section-portfolio {
+  padding-top: 123px;
+  padding-bottom: 100px;
+}
+
+.portfolio {
+  display: grid;
+  grid-template: repeat(7, 88px)/repeat(3, 1fr);
+  gap: 40px;
+  margin-top: 83px;
+}
+.portfolio-1 {
+  grid-area: 1/1/4/2;
+}
+.portfolio-2 {
+  grid-area: 1/2/5/3;
+}
+.portfolio-3 {
+  grid-area: 1/3/4/4;
+}
+.portfolio-4 {
+  grid-area: 4/1/8/2;
+}
+.portfolio-5 {
+  grid-area: 5/2/8/3;
+}
+.portfolio-6 {
+  grid-area: 4/3/8/4;
+}
+.portfolio-thumb {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+.portfolio-thumb img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 /*# sourceMappingURL=style.css.map */
