--- a/styles/style.css
+++ b/styles/style.css
@@ -297,22 +297,22 @@ body {
   gap: 40px;
   margin-top: 83px;
 }
-.portfolio-1 {
+.portfolio-photo1 {
   grid-area: 1/1/4/2;
 }
-.portfolio-2 {
+.portfolio-photo2 {
   grid-area: 1/2/5/3;
 }
-.portfolio-3 {
+.portfolio-photo3 {
   grid-area: 1/3/4/4;
 }
-.portfolio-4 {
+.portfolio-photo4 {
   grid-area: 4/1/8/2;
 }
-.portfolio-5 {
+.portfolio-photo5 {
   grid-area: 5/2/8/3;
 }
-.portfolio-6 {
+.portfolio-photo6 {
   grid-area: 4/3/8/4;
 }
 .portfolio-thumb {
@@ -329,6 +329,41 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.btn {
+  background-color: #22222b;
+  font-size: 16px;
+  text-decoration: none;
+  padding: 20px 0;
+}
+
+.section-portfolio {
+  padding-top: 119px;
+  padding-bottom: 161px;
+}
+
+.section-banner {
+  padding-top: 100px;
+  padding-bottom: 113px;
+  background-color: #22222b;
+  text-align: center;
+}
+.section-banner .before-title {
+  color: white;
+  font-size: 22px;
+  margin-bottom: 0;
+}
+.section-banner .title-h2 {
+  color: white;
+  font-size: 48px;
+  margin-top: 15px;
+  margin-bottom: 42px;
+}
+.section-banner .btn {
+  color: #22222b;
+  background-color: white;
+  padding: 12px 57px;
 }
 
 /*# sourceMappingURL=style.css.map */
