--- a/styles/style.scss
+++ b/styles/style.scss
@@ -312,22 +312,22 @@ body{
   grid-template: repeat(7, 88px) / repeat(3, 1fr);
   gap: 40px;
   margin-top: 83px;
-  &-1{
+  &-photo1{
     grid-area: 1 / 1 / 4 / 2;
   }
-  &-2{
+  &-photo2{
     grid-area: 1 / 2 / 5 / 3;
   }
-  &-3{
+  &-photo3{
     grid-area: 1 / 3 / 4 / 4;
   }
-  &-4{
+  &-photo4{
     grid-area: 4 / 1 / 8 / 2;
   }
-  &-5{
+  &-photo5{
     grid-area: 5 / 2 / 8 / 3;
   }
-  &-6{
+  &-photo6{
     grid-area: 4 / 3 / 8 / 4;
   }
   &-thumb{
@@ -344,5 +344,40 @@ body{
       height: 100%;
       object-fit: cover;
     }
+  }
+}
+
+.btn{
+  background-color: $dark;
+  font-size: 16px;
+  text-decoration: none;
+  padding: 20px 0;
+}
+
+.section-portfolio{
+  padding-top: 119px;
+  padding-bottom: 161px;
+}
+
+.section-banner{
+  padding-top: 100px;
+  padding-bottom: 113px;
+  background-color: $dark;
+  text-align: center;
+  .before-title{
+    color: white;
+    font-size: 22px;
+    margin-bottom: 0;
+  }
+  .title-h2{
+    color: white;
+    font-size: 48px;
+    margin-top: 15px;
+    margin-bottom: 42px;
+  }
+  .btn{
+    color: $dark;
+    background-color: white;
+    padding: 12px 57px;
   }
 }
