feat: index.html(section "testimonials") + styles

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -361,12 +361,13 @@ body{
 
 .section-banner{
   padding-top: 100px;
-  padding-bottom: 113px;
+  padding-bottom: 100px;
   background-color: $dark;
   text-align: center;
   .before-title{
     color: white;
     font-size: 22px;
+    margin-top: 0;
     margin-bottom: 0;
   }
   .title-h2{
@@ -379,5 +380,48 @@ body{
     color: $dark;
     background-color: white;
     padding: 12px 57px;
+  }
+}
+
+.section-feedback{
+  padding-top: 122px;
+  padding-bottom: 100px;
+}
+
+.feedback{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 66px;
+  &-item{
+    flex: 0 0 45%;
+    max-width: 45%;
+  }
+  &-top{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-bottom: 56px;
+  }
+  &-thumb{
+    margin-right: 10px;
+  }
+  &-name{
+    &__title{
+      font-size: 22px;
+      margin-top: 14px;
+      margin-bottom: 11px;
+    }
+    &__job{
+      font-size: 12px;
+      color: $text;
+      margin-bottom: 0;
+    }
+  }
+  &-body{
+    font-size: 18px;
+    color: $text;
+    font-style: italic;
+    padding-left: 28px;
+    line-height: 1.8;
   }
 }
