--- a/styles/style.css
+++ b/styles/style.css
@@ -345,13 +345,14 @@ body {
 
 .section-banner {
   padding-top: 100px;
-  padding-bottom: 113px;
+  padding-bottom: 100px;
   background-color: #22222b;
   text-align: center;
 }
 .section-banner .before-title {
   color: white;
   font-size: 22px;
+  margin-top: 0;
   margin-bottom: 0;
 }
 .section-banner .title-h2 {
@@ -364,6 +365,47 @@ body {
   color: #22222b;
   background-color: white;
   padding: 12px 57px;
+}
+
+.section-feedback {
+  padding-top: 122px;
+  padding-bottom: 100px;
+}
+
+.feedback {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 66px;
+}
+.feedback-item {
+  flex: 0 0 45%;
+  max-width: 45%;
+}
+.feedback-top {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-bottom: 56px;
+}
+.feedback-thumb {
+  margin-right: 10px;
+}
+.feedback-name__title {
+  font-size: 22px;
+  margin-top: 14px;
+  margin-bottom: 11px;
+}
+.feedback-name__job {
+  font-size: 12px;
+  color: #7f7f82;
+  margin-bottom: 0;
+}
+.feedback-body {
+  font-size: 18px;
+  color: #7f7f82;
+  font-style: italic;
+  padding-left: 28px;
+  line-height: 1.8;
 }
 
 /*# sourceMappingURL=style.css.map */
