--- a/styles/style.scss
+++ b/styles/style.scss
@@ -249,27 +249,27 @@ body{
     margin-bottom: 30px;
   }
   &__design{
-    background-image: url("../images/icon1.png");
+    background-image: url("../images/services/icon1.png");
     background-size: 41px 35px;
   }
   &__photo{
-    background-image: url("../images/icon2.png");
+    background-image: url("../images/services/icon2.png");
     background-size: 43px 35px;
   }
   &__web{
-    background-image: url("../images/icon3.png");
+    background-image: url("../images/services/icon3.png");
     background-size: 41px 35px;
   }
   &__media{
-    background-image: url("../images/icon4.png");
+    background-image: url("../images/services/icon4.png");
     background-size: 37px 37px;
   }
   &__marketing{
-    background-image: url("../images/icon5.png");
+    background-image: url("../images/services/icon5.png");
     background-size: 44px 37px;
   }
   &__app{
-    background-image: url("../images/icon6.png");
+    background-image: url("../images/services/icon6.png");
     background-size: 37px 37px;
   }
   &__text{
@@ -423,5 +423,52 @@ body{
     font-style: italic;
     padding-left: 28px;
     line-height: 1.8;
+  }
+}
+
+.section-advantages{
+  padding-top: 122px;
+  padding-bottom: 100px;
+  background-color: $light;
+}
+
+.advantages{
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  &__title{
+    font-size: 16px;
+    text-transform: uppercase;
+    span{
+      font-size: 22px;
+      display: block;
+      font-weight: 500;
+    }
+  }
+  &__icon{
+    background-color: $dark;
+    width: 70px;
+    height: 70px;
+    border-radius: 100%;
+    margin: 0 auto;
+    background-position: center center;
+    background-repeat: no-repeat;
+    &-1{
+      background-image: url("../images/advantages/icon7.png");
+      background-size: 26px 23px;
+    }
+    &-2{
+      background-image: url("../images/advantages/icon8.png");
+      background-size: 26px 23px;
+    }
+    &-3{
+      background-image: url("../images/advantages/icon9.png");
+      background-size: 26px 24px;
+    }
+    &-4{
+      background-image: url("../images/advantages/icon10.png");
+      background-size: 19px 23px;
+    }
+
   }
 }
