--- a/styles/style.css
+++ b/styles/style.css
@@ -409,7 +409,7 @@ body {
 }
 
 .section-advantages {
-  padding-top: 122px;
+  padding-top: 100px;
   padding-bottom: 100px;
   background-color: #faf9fe;
 }
@@ -427,13 +427,14 @@ body {
   font-size: 22px;
   display: block;
   font-weight: 500;
+  margin-bottom: 13px;
 }
 .advantages__icon {
   background-color: #22222b;
   width: 70px;
   height: 70px;
   border-radius: 100%;
-  margin: 0 auto;
+  margin: 0 auto 27px;
   background-position: center center;
   background-repeat: no-repeat;
 }
@@ -452,6 +453,42 @@ body {
 .advantages__icon-4 {
   background-image: url("../images/advantages/icon10.png");
   background-size: 19px 23px;
+}
+
+.section-form {
+  padding-top: 122px;
+  padding-bottom: 100px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  max-width: 750px;
+  margin: 48px auto;
+  text-align: center;
+}
+.form__input, .form__textarea {
+  border: none;
+  border-bottom: 1px solid #e1e1e1;
+  font-size: 14px;
+  padding: 17px 25px;
+  text-align: center;
+  margin-bottom: 15px;
+  transition: 0.3s;
+  box-sizing: border-box;
+}
+.form__input:focus, .form__textarea:focus {
+  outline: none;
+  border-bottom: 1px solid #22222b;
+}
+.formtextarea {
+  padding: 12px 25px;
+  min-height: 86px;
+  margin-bottom: 35px;
+}
+.form .btn {
+  color: white;
+  border: none;
 }
 
 /*# sourceMappingURL=style.css.map */
