--- a/styles/style.scss
+++ b/styles/style.scss
@@ -427,7 +427,7 @@ body{
 }
 
 .section-advantages{
-  padding-top: 122px;
+  padding-top: 100px;
   padding-bottom: 100px;
   background-color: $light;
 }
@@ -443,6 +443,7 @@ body{
       font-size: 22px;
       display: block;
       font-weight: 500;
+      margin-bottom: 13px;
     }
   }
   &__icon{
@@ -450,7 +451,7 @@ body{
     width: 70px;
     height: 70px;
     border-radius: 100%;
-    margin: 0 auto;
+    margin: 0 auto 27px;
     background-position: center center;
     background-repeat: no-repeat;
     &-1{
@@ -469,6 +470,41 @@ body{
       background-image: url("../images/advantages/icon10.png");
       background-size: 19px 23px;
     }
+  }
+}
 
+.section-form{
+  padding-top: 122px;
+  padding-bottom: 100px;
+}
+
+.form{
+  display: flex;
+  flex-direction: column;
+  max-width: 750px;
+  margin: 48px auto;
+  text-align: center;
+  &__input, &__textarea{
+    border: none;
+    border-bottom: 1px solid #e1e1e1;
+    font-size: 14px;
+    padding: 17px 25px;
+    text-align: center;
+    margin-bottom: 15px;
+    transition: .3s;
+    box-sizing: border-box;
+    &:focus{
+      outline: none;
+      border-bottom: 1px solid $dark;
+    }
+  }
+  &textarea{
+    padding: 12px 25px;
+    min-height: 86px;
+    margin-bottom: 35px;
+  }
+  .btn{
+    color: white;
+    border: none;
   }
 }
