--- a/styles/style.css
+++ b/styles/style.css
@@ -457,7 +457,7 @@ body {
 
 .section-form {
   padding-top: 122px;
-  padding-bottom: 100px;
+  padding-bottom: 130px;
 }
 
 .form {
@@ -489,6 +489,33 @@ body {
 .form .btn {
   color: white;
   border: none;
+}
+
+footer {
+  background-color: #22222b;
+  padding-top: 64px;
+  padding-bottom: 69px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  font-size: 16px;
+}
+
+.social-network {
+  display: flex;
+  list-style-type: none;
+  padding-left: 0;
+  margin: 0;
+}
+.social-network-item {
+  margin-left: 20px;
+}
+.social-network__link {
+  color: white;
 }
 
 /*# sourceMappingURL=style.css.map */
