--- a/styles/style.scss
+++ b/styles/style.scss
@@ -475,7 +475,7 @@ body{
 
 .section-form{
   padding-top: 122px;
-  padding-bottom: 100px;
+  padding-bottom: 130px;
 }
 
 .form{
@@ -506,5 +506,32 @@ body{
   .btn{
     color: white;
     border: none;
+  }
+}
+
+footer{
+  background-color: $dark;
+  padding-top: 64px;
+  padding-bottom: 69px;
+}
+
+.footer{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  font-size: 16px;
+}
+
+.social-network{
+  display: flex;
+  list-style-type: none;
+  padding-left: 0;
+  margin: 0;
+  &-item{
+    margin-left: 20px;
+  }
+  &__link{
+    color: white;
   }
 }
