feat: button hover effects

--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,11 @@ body {
   border-bottom: 2px solid #22222b;
 }
 
+.main-title {
+  position: relative;
+  margin-top: 100px;
+}
+
 .title-h1 {
   font-size: 60px;
   text-align: center;
@@ -86,6 +91,37 @@ body {
 
 .after-title {
   font-size: 16px;
+}
+
+.lines {
+  position: absolute;
+  background: black;
+}
+.lines-1 {
+  width: 25px;
+  height: 2px;
+  transform: rotate(90deg);
+  top: -7px;
+  left: -50px;
+}
+.lines-2 {
+  width: 30px;
+  height: 2px;
+  left: -37px;
+  top: -19px;
+}
+.lines-3 {
+  width: 25px;
+  height: 2px;
+  transform: rotate(90deg);
+  bottom: -7px;
+  right: -50px;
+}
+.lines-4 {
+  width: 30px;
+  height: 2px;
+  right: -37px;
+  bottom: -19px;
 }
 
 .btn-scroll {
@@ -365,6 +401,12 @@ body {
   color: #22222b;
   background-color: white;
   padding: 12px 57px;
+  transition: border-color 0.5s, background-color 0.5s, color 0.5s;
+}
+.section-banner .btn:hover {
+  background-color: transparent;
+  border: 3px solid white;
+  color: white;
 }
 
 .section-feedback {
@@ -458,6 +500,7 @@ body {
 .section-form {
   padding-top: 122px;
   padding-bottom: 130px;
+  box-sizing: border-box;
 }
 
 .form {
@@ -488,7 +531,11 @@ body {
 }
 .form .btn {
   color: white;
-  border: none;
+  border: 3px solid transparent;
+  transition: 0.5s;
+}
+.form .btn:hover {
+  transform: scale(0.9);
 }
 
 footer {
