--- a/styles/style.scss
+++ b/styles/style.scss
@@ -348,6 +348,31 @@ body{
   grid-template: repeat(7, 88px) / repeat(3, 1fr);
   gap: 40px;
   margin-top: 83px;
+  &-item{
+    position: relative;
+    &__back{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin: 0 auto;
+      inset: 20px 20px 20px 20px;
+      font-size: 24px;
+      font-weight: 500;
+      color: $dark;
+      background: rgba(255,255,255, 0.5);
+      opacity: 0;
+      transition: opacity .7s;
+      position: absolute;
+      span{
+        font-size: 15px;
+        line-height: 2.5;
+      }
+      &:hover{
+        opacity: 1;
+      }
+    }
+  }
   &-photo1{
     grid-area: 1 / 1 / 4 / 2;
   }
@@ -416,7 +441,7 @@ body{
     color: $dark;
     background-color: white;
     padding: 12px 57px;
-    transition: border-color 0.5s, background-color 0.5s, color 0.5s;
+    transition: border-color 0.7s, background-color 0.7s, color 0.7s;
     &:hover{
       background-color: transparent;
       border: 3px solid white;
