--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,400&display=swap");
 body, html {
   height: 100vh;
@@ -253,11 +254,11 @@ body {
   gap: 31px 48px;
   margin-top: 65px;
 }
-.service-item:hover .service__link-text {
-  width: inherit;
-  color: #22222b;
+.service-item:hover .service__link a {
   opacity: 1;
-  padding-right: 9px;
+}
+.service-item:hover .service__link a::after {
+  width: 60%;
 }
 .service .title-h3 {
   margin-bottom: 18px;
@@ -298,28 +299,29 @@ body {
   font-size: 14px;
   line-height: 1.8;
 }
-.service__link {
+.service__link a {
+  display: inline-block;
   color: #22222b;
   font-size: 14px;
+  line-height: 1;
   text-decoration: none;
+  cursor: pointer;
   position: relative;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  height: 60px;
-}
-.service__link-text {
+  margin-top: 20px;
+  margin-bottom: 30px;
   opacity: 0;
-  width: 0;
-  padding-right: 0;
-  color: transparent;
-  transition: 0.4s ease-in-out;
+  transition: 0.3s;
 }
-.service__link-line {
+.service__link a::after {
+  background-color: #22222b; /* Цвет линии при наведении на нее курсора мыши */
   display: block;
-  width: 25px;
-  height: 1px;
-  background-color: #22222b;
+  content: "";
+  height: 2px; /* Высота линии */
+  width: 0;
+  transition: width 0.3s ease-in-out;
+  position: absolute;
+  top: 7px;
+  right: -50px;
 }
 
 .section-portfolio {
