--- a/styles/style.scss
+++ b/styles/style.scss
@@ -322,7 +322,7 @@ body{
     cursor: pointer;
     position: relative;
     margin-top: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     opacity: 0;
     transition: .3s;
     &::after{
@@ -607,4 +607,68 @@ footer{
   &__link{
     color: white;
   }
+}
+
+@media(max-width: 940px){
+  .section-about-me{
+    padding-top: 200px;
+    padding-bottom: 100px;
+  }
+
+  .box-about{
+    flex-direction: column;
+    &-item{
+      flex: none;
+      max-width: 80%;
+      &:first-child{
+        justify-content: end;
+        flex: none;
+        max-width: 33%;
+      }
+      .title-h2{
+        text-align: center;
+      }
+    }
+    &__vertical{
+      left: 280px;
+      transform: rotate(360deg);
+      &::after{
+        top: -60px;
+      }
+    }
+  }
+
+  .section-services{
+    padding-top: 80px;
+    padding-bottom: 60px;
+  }
+  .service{
+    grid-template: 1fr 1fr 1fr/1fr 1fr;
+    &__icon{
+      margin: 0 auto 30px;
+    }
+    .title-h3{
+      text-align: center;
+    }
+  }
+
+  .section-portfolio {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
+  .portfolio{
+    grid-template: repeat(7, 88px)/repeat(2, 1fr);
+  }
+
+  .section-banner {
+    padding-top: 70px;
+    padding-bottom: 70px;
+    .title-h2{
+      font-size: 40px;
+    }
+  }
+}
+
+@media(max-width: 600px) {
 }
