--- a/styles/style.css
+++ b/styles/style.css
@@ -55,12 +55,36 @@ body {
 }
 .nav-link {
   color: #22222b;
+  font-weight: 500;
   text-decoration: none;
   border-bottom: 2px solid transparent;
   transition: 0.3s;
 }
 .nav-link:hover {
   border-bottom: 2px solid #22222b;
+}
+
+.header-burger {
+  display: none;
+  width: 40px;
+}
+.header-burger:before, .header-burger:after, .header-burger__lines {
+  background: #22222b;
+  content: "";
+  display: block;
+  height: 5px;
+  border-radius: 3px;
+  margin: 7px 0;
+  transition: 0.5s;
+}
+.header-burger:hover:before {
+  transform: translateY(12px) rotate(135deg);
+}
+.header-burger:hover:after {
+  transform: translateY(-12px) rotate(-135deg);
+}
+.header-burger:hover .header-burger__lines {
+  transform: scale(0);
 }
 
 .main-title {
@@ -324,11 +348,6 @@ body {
   right: -50px;
 }
 
-.section-portfolio {
-  padding-top: 123px;
-  padding-bottom: 100px;
-}
-
 .portfolio {
   display: grid;
   grid-template: repeat(7, 88px)/repeat(3, 1fr);
@@ -567,7 +586,7 @@ body {
 footer {
   background-color: #22222b;
   padding-top: 64px;
-  padding-bottom: 69px;
+  padding-bottom: 64px;
 }
 
 .footer {
@@ -594,7 +613,36 @@ footer {
 @media (max-width: 940px) {
   .section-about-me {
     padding-top: 200px;
+    padding-bottom: 80px;
+  }
+  .section-services {
+    padding-top: 80px;
+  }
+  .section-portfolio {
+    padding-top: 80px;
     padding-bottom: 100px;
+  }
+  .section-banner {
+    padding-top: 70px;
+    padding-bottom: 70px;
+  }
+  .section-feedback {
+    padding-top: 100px;
+    padding-bottom: 80px;
+  }
+  .section-advantages {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  .section-form {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+  .nav {
+    display: none;
+  }
+  .header-burger {
+    display: block;
   }
   .box-about {
     flex-direction: column;
@@ -612,15 +660,11 @@ footer {
     text-align: center;
   }
   .box-about__vertical {
-    left: 280px;
+    left: 300px;
     transform: rotate(360deg);
   }
   .box-about__vertical::after {
     top: -60px;
-  }
-  .section-services {
-    padding-top: 80px;
-    padding-bottom: 60px;
   }
   .service {
     grid-template: 1fr 1fr 1fr/1fr 1fr;
@@ -631,26 +675,16 @@ footer {
   .service .title-h3 {
     text-align: center;
   }
-  .section-portfolio {
-    padding-top: 100px;
-    padding-bottom: 100px;
-  }
   .portfolio {
+    margin-top: 40px;
     grid-template: repeat(7, 88px)/repeat(2, 1fr);
+    gap: 20px;
   }
   .portfolio-photo3, .portfolio-photo6 {
     display: none;
   }
-  .section-banner {
-    padding-top: 70px;
-    padding-bottom: 70px;
-  }
   .section-banner .title-h2 {
     font-size: 40px;
-  }
-  .section-feedback {
-    padding-top: 100px;
-    padding-bottom: 80px;
   }
   .feedback-body {
     font-size: 16px;
@@ -659,21 +693,78 @@ footer {
     justify-content: center;
     align-items: center;
   }
-  .section-advantages {
-    padding-top: 50px;
-    padding-bottom: 50px;
-  }
   .advantages {
     display: grid;
     grid-template: 1fr 1fr/1fr 1fr;
     gap: 40px 10px;
   }
+  .footer {
+    font-size: 14px;
+  }
+}
+@media (max-width: 600px) {
+  .section-about-me {
+    padding-top: 80px;
+  }
+  .section-portfolio {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .section-feedback {
+    padding-top: 80px;
+  }
   .section-form {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+  .title-h1 {
+    font-size: 40px;
+  }
+  .section-about-me .title-h2 {
+    font-size: 35px;
+    margin-top: 30px;
+  }
+  .box-about-item:first-child {
+    max-width: 100%;
+  }
+  .box-about__back {
+    display: none;
+  }
+  .service__text {
+    font-size: 12px;
+  }
+  .portfolio {
+    grid-template: repeat(7, 60px)/repeat(2, 1fr);
+    gap: 10px;
+  }
+  .section-banner .title-h2 {
+    font-size: 30px;
+  }
+  .feedback-top {
+    flex-direction: column;
+    margin-bottom: 35px;
+  }
+  .feedback-thumb {
+    margin-right: 0;
+  }
+  .feedback-name__title {
+    font-size: 22px;
+    margin-top: 14px;
+    margin-bottom: 11px;
+  }
+  .feedback-body {
+    font-size: 12px;
+    padding-left: 12px;
   }
   .footer {
-    font-size: 12px;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+  }
+  .social-network {
+    margin-bottom: 10px;
+  }
+  .social-network-item:first-child {
+    margin-left: 0;
   }
 }
 
